# gnome-gitlab

./: .gitignore  autogen.sh  configure.ac
data/: Makefile.am  eu.polonkai.gergely.gnome-gitlab.gschema.xml.in.in
po/: POTFILES.in
src/: Makefile.am  application.vala  gg-application.vala  gg-preferences.vala  gg-window.vala  main.vala
src/resources/: gnome-gitlab.gresource.xml
src/resources/ui/: gg-preferences.ui  gg-window.ui
